/*
 * $Id: ChangeLog,v 1.2185 2004/01/30 09:42:17 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-01-30 13:55 UTC-0300 Mauricio Abre <maurifull@datafull.com>
  * source/rtl/gtalleg/ssf.h
  * source/rtl/gtalleg/gtalleg.c
    ! Don't try X Windows modes if Allegro was compiled only for FB use

2004-01-30 16:40 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
   * source/rdd/dbf1.c
   * source/rdd/dbcmd.c
     ! fix to some memory leaks when:
       % opening a dbf with same alias
       % opening a dbf which does not exist
       % opening a dbf with memo but no DBT/FPT found
       % opening a corrupted dbf

2004-01-30 03:45 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * makefile.nt
  * makefile.vc
    * build source\rtl\gtalleg if HB_GTALLEG is defined.

2004-01-29 23:20 UTC-0300 Mauricio Abre <maurifull@datafull.com>
  * source/rtl/gtalleg/gtalleg.c
    * Try 16 bit modes first, then 8 bit under DOS & Linux FB
  * makefile.bc
    + Added conditional gtalleg compilation

2004-01-30 03:00 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/make_rpm.sh
  * xharbour/xharbour.spec
    * auto detect allegro-devel installed and build gtalleg
    + new switch '--with allegro' to force allegro building
      when allegro-devel not installed from RPM

  * xharbour/bin/hb-func.sh
    * buily gtalleg as static lib only to not force linking with
      allegro libs. If user wants to use allegro in his apps he has
      to use -gtalleg swich in xhb* scripts or add to his prg sources:
      REQUEST HB_GT_ALLEG

  * xharbour/source/rtl/gtalleg/gtalleg.c
    * _mangled_main added to allow linking with shared allegro libs

2004-01-30 07:35 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/vm/debug.c
    + add wrappers (some 3rd-party-libs still use these ones) for :
      __VMSTKLCOUNT()
      __VMPARLLIST()